# Rust

./: .gitignore  LICENSE  test.txt
Documentacion/: Rust.docx  RustQuickReference.docx  ~$stQuickReference.docx  ~WRL3097.tmp
Documentation/: .~lock.EmbeddedRust.docx#  EmbeddedRust.docx  RustLang.adoc  RustLang.html  RustQuickReference.docx
Documentation/images/: Rustlang.html
Documentation/images/index Archivos/: a_003.css  a_005.css
EmbeddedRust/: README.md
EmbeddedRust/RE00_Template/: Cargo.toml
EmbeddedRust/RE00_Template/examples/: hello.rs
EmbeddedRust/RE00_Template/template/: Cargo.toml
EmbeddedRust/RE01_Blinky/blinky/: Cargo.toml
EmbeddedRust/RE02_UART/uart/: Cargo.toml
P01_HelloWorld_Cargo/: Cargo.toml
P02_GuessingGame/src/: main.rs
ProgrammingLanguage/P00_HelloWorld/: main.rs
ProgrammingLanguage/P02_GuessingGame/: Cargo.toml
ProgrammingLanguage/P02_GuessingGame/src/: main.rs
ProgrammingLanguage/P03_IOProject/: Cargo.toml  README.MD  poem.txt
ProgrammingLanguage/P03_IOProject/src/: lib.rs  main.rs
ProgrammingLanguage/P04_Cache_Closure/: Cargo.toml
ProgrammingLanguage/P04_Cache_Closure/src/: main.rs
ProgrammingLanguage/P05_Multithreaded_WebServer/: README.MD
ProgrammingLanguage/P05_Multithreaded_WebServer/src/: lib.rs
Projects/01_AdventCode2021/advent_of_code/: Cargo.toml
Projects/02_String_Calculator/string_calculator/: Cargo.toml
Projects/03_CommandLineUtilities/weather_forecast/: Cargo.toml
Projects/03_CommandLineUtilities/weather_forecast/src/: main.rs
Projects/03_WindowControl/window_control/: Cargo.toml
(+19 files in other folders)
