[package]
name = "weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.9", features = ["derive", "wrap_help"]}
reqwest = {version = "0.11.18", features = ["blocking"]}
